--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -7,9 +7,16 @@
     tools:context=".StartFragment">
 
 
+    <TextView
+        android:id="@+id/dataTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TEST"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
         <Button
             android:id="@+id/startGameBtn"
