--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -12,12 +12,20 @@
         android:padding="10dp">
 
         <Button
+            android:id="@+id/backBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:background="@drawable/submit_button"/>
+
+        <Button
             android:id="@+id/gameBoardChangeBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Change Game Board Size"
             android:textAppearance="@style/CustomMainButtonText"
-            android:background="@drawable/rectangular_button" />
+            android:background="@drawable/rectangular_button"
+            android:layout_marginTop="10dp"/>
         <FrameLayout
             android:id="@+id/gameBoardFrameLayout"
             android:layout_width="match_parent"
@@ -29,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Change game mode"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:textAppearance="@style/CustomMainButtonText"
             android:background="@drawable/rectangular_button"/>
         <FrameLayout
@@ -43,28 +51,53 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Change Player Profile"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:textAppearance="@style/CustomMainButtonText"
             android:background="@drawable/rectangular_button"/>
+
+    <LinearLayout
+        android:id="@+id/changePlayerProfileLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="#5160A4"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:paddingBottom="5dp"
+        android:visibility="gone">
+        <Button
+            android:id="@+id/player1Btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:textAppearance="@style/CustomSubButtonText"
+            android:text="Player 1"/>
         <FrameLayout
-            android:id="@+id/playerProfileFrameLayout"
+            android:id="@+id/player1FrameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="10dp">
         <Button
-            android:id="@+id/backBtn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Back" />
+            android:id="@+id/player2Btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:textAppearance="@style/CustomSubButtonText"
+            android:text="Player 2"/>
+        <FrameLayout
+            android:id="@+id/player2FrameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
     </LinearLayout>
+
+
+
+    </LinearLayout>
+
 </FrameLayout>
