--- a/app/src/main/res/layout/fragment_setting_change_player_profile.xml
+++ b/app/src/main/res/layout/fragment_setting_change_player_profile.xml
@@ -16,6 +16,13 @@
         android:layout_marginEnd="30dp"
         android:paddingBottom="10dp"
         android:paddingTop="5dp">
+
+        <Spinner
+            android:id="@+id/playerProfileSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"/>
+
         <EditText
             android:id="@+id/playerName"
             android:layout_width="match_parent"
