--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -6,17 +6,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".StartFragment">
 
-
-    <TextView
-        android:id="@+id/dataTest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TEST"/>
-
     <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/upperBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="#3B4A8B">
 
+            <TextView
+                android:id="@+id/titleTV"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:gravity="center"
+                android:text="Four Connect Game"
+                android:textColor="@color/white"
+                android:textSize="12pt"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
             android:id="@+id/startGameBtn"
@@ -25,7 +36,7 @@
             android:text="Start Game"
             android:textSize="20sp"
             android:layout_margin="15dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/upperBar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/statisticBtn"
             app:layout_constraintEnd_toEndOf="parent"
