--- a/app/src/main/res/layout/fragment_game_large.xml
+++ b/app/src/main/res/layout/fragment_game_large.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".GameFragment">
 
-    <!-- GridLayout for the game board -->
+    <!-- Small game board 8*7 -->
     <GridLayout
         android:id="@+id/grid_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/wood_background"
         android:padding="8dp"
-        android:rowCount="6"
-        android:columnCount="5"
+        android:rowCount="8"
+        android:columnCount="7"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
