--- a/app/src/main/res/layout/fragment_game_large.xml
+++ b/app/src/main/res/layout/fragment_game_large.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".GameFragment">
+    android:layout_height="match_parent">
 
-    <!-- Small game board 8*7 -->
     <GridLayout
         android:id="@+id/grid_layout"
         android:layout_width="0dp"
@@ -18,7 +15,77 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintDimensionRatio="7:8" >
 
+        <!-- Buttons for each slot -->
+        <!-- First row -->
+        <Button android:id="@+id/slot_0_0" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_0_1" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_0_2" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_0_3" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_0_4" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_0_5" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_0_6" style="@style/CircularSlot" />
+
+        <Button android:id="@+id/slot_1_0" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_1_1" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_1_2" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_1_3" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_1_4" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_1_5" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_1_6" style="@style/CircularSlot" />
+
+        <Button android:id="@+id/slot_2_0" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_2_1" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_2_2" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_2_3" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_2_4" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_2_5" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_2_6" style="@style/CircularSlot" />
+
+        <Button android:id="@+id/slot_3_0" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_3_1" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_3_2" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_3_3" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_3_4" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_3_5" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_3_6" style="@style/CircularSlot" />
+
+        <Button android:id="@+id/slot_4_0" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_4_1" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_4_2" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_4_3" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_4_4" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_4_5" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_4_6" style="@style/CircularSlot" />
+
+        <!-- Sixth row -->
+        <Button android:id="@+id/slot_5_0" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_5_1" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_5_2" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_5_3" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_5_4" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_5_5" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_5_6" style="@style/CircularSlot" />
+
+        <!-- Seventh row -->
+        <Button android:id="@+id/slot_6_0" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_6_1" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_6_2" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_6_3" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_6_4" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_6_5" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_6_6" style="@style/CircularSlot" />
+
+        <Button android:id="@+id/slot_7_0" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_7_1" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_7_2" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_7_3" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_7_4" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_7_5" style="@style/CircularSlot" />
+        <Button android:id="@+id/slot_7_6" style="@style/CircularSlot" />
+
+    </GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
