--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
-    <color name="clicked_slot_color">#FFD700</color>  <!-- Example: Gold -->
+    <color name="red">#FFFF0000</color>
+    <color name="blue">#FF0000FF</color>
+    <color name="gold">#FFD700</color>
+    <color name="default_slot_color">#E0E0E0</color> <!-- Light grey -->
 
 </resources>
