--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="red">#FFFF0000</color>
     <color name="blue">#FF0000FF</color>
     <color name="gold">#FFD700</color>
+    <color name="green">#24C300</color>
+    <color name="orange">#F07000</color>
     <color name="default_slot_color">#E0E0E0</color> <!-- Light grey -->
 
 </resources>
